allow parallel test execution via `skip_queue` flag
